--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <script defer src="index.js"></script>
   </head>
   <body>
-        <img src="/Users/carolinemcdonald/Development/code/phase-1/phase-1-project/Logo.gif" id="logo"/>
-          <p>We need your help naming our animals! There are too many and we can't think of anymore names because we are tired.</p>
+        <h1>FLATANIMAL-NAMER 3000</h1>
+          <p>We need your help naming the animals at the Flatanimal Zoo! There are too many and we can't think of anymore names because we are tired.</p>
             <div id="animalDetails">
             </div>
     <div class="container">
