--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
     <script defer src="index.js"></script>
   </head>
   <body>
+      <div id="header">
         <h1>FLATANIMAL-NAMER 3000</h1>
-          <p>We need your help naming the animals at the Flatanimal Zoo! There are too many and we can't think of anymore names because we are tired.</p>
+          <p>We need your help naming the animals at the Flatanimal Zoo! There are too many and we can't think of any more names because we are tired.</p>
+      </div>
             <div id="animalDetails">
             </div>
     <div class="container">
