--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
   <body>
       <div id="header">
         <h1>FLATANIMAL-NAMER 3000</h1>
-          <p>We need your help naming the animals at the Flatanimal Zoo! There are too many and we can't think of any more names because we are tired.</p>
+          <p>We need your help naming the animals at the Flatanimal Zoo! There are too many and we are tired.</p>
       </div>
             <div id="animalDetails">
             </div>
     <div class="container">
       <div class="verticalCenter">
-      <button>Load more animals</button>
+      <button>Name more animals</button>
       </div>
     </div>
     <p>Questions, comments, concerns, suggestions? Contact Caroline at ckmcdon@gmail.com.</p>
